Se agregó el optimizador sgd con inercia
Se agregó el optmizador de Stochastic Gradient Descent con inercia.
Los problemas que experimenté fue que al correr el código me marcaba un error en las dimensiones al operar con matrices, hice muchas pruebas para determinar la fuente del error, se debió a un error en la definición de "p_b" y "p_w" (líneas 99 y 100 del archivo network.py). Otro pequeño error que tuve fue que al actualizar los pesos y los biases crucé las listas.
Para probar el código usé varios valores para gamma pero ninguno daba un buen resultado, de igual manera para eta. Investigando encontré que el valor más óptimo para gamma es 0.9, usé ese valor y obtuve resultados muy similares a los obtenidos antes de agregar el optimizador al usar 30 neuronas en la capa intermedia y 30 épocas con eta igual a 0.1.
Usando 100 neuronas en la capa de entrada obtuve malos resultados, probé diferentes valores para gamma, eta y el número de épocas. El mejor resultado que pude obtener fue el que se encuentra en el archivo pruebas.ipynb, usando 50 épocas y eta igual a 0.2 se obtuvo un 77.68% de aciertos.
Probablemente usando un número mayor de épocas o un eta menor se pudieran mejorar los resultados, no hice más pruebas pues tardaba mucho en ejecutar el código.

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "training_data, validation_data , test_data = mnist_loader.load_data_wrapper()\n",
@@ -53,42 +53,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : 8169 / 10000\n",
-      "Epoch 1 : 8381 / 10000\n",
-      "Epoch 2 : 8456 / 10000\n",
-      "Epoch 3 : 9314 / 10000\n",
-      "Epoch 4 : 9358 / 10000\n",
-      "Epoch 5 : 9356 / 10000\n",
-      "Epoch 6 : 9396 / 10000\n",
-      "Epoch 7 : 9425 / 10000\n",
-      "Epoch 8 : 9422 / 10000\n",
-      "Epoch 9 : 9426 / 10000\n",
-      "Epoch 10 : 9444 / 10000\n",
-      "Epoch 11 : 9414 / 10000\n",
-      "Epoch 12 : 9433 / 10000\n",
-      "Epoch 13 : 9441 / 10000\n",
-      "Epoch 14 : 9477 / 10000\n",
-      "Epoch 15 : 9455 / 10000\n",
-      "Epoch 16 : 9483 / 10000\n",
-      "Epoch 17 : 9455 / 10000\n",
-      "Epoch 18 : 9496 / 10000\n",
-      "Epoch 19 : 9486 / 10000\n",
-      "Epoch 20 : 9459 / 10000\n",
-      "Epoch 21 : 9485 / 10000\n",
-      "Epoch 22 : 9490 / 10000\n",
-      "Epoch 23 : 9509 / 10000\n",
-      "Epoch 24 : 9475 / 10000\n",
-      "Epoch 25 : 9494 / 10000\n",
-      "Epoch 26 : 9496 / 10000\n",
-      "Epoch 27 : 9512 / 10000\n",
-      "Epoch 28 : 9506 / 10000\n",
-      "Epoch 29 : 9480 / 10000\n"
+      "Epoch 0 : 8679 / 10000\n",
+      "Epoch 1 : 9055 / 10000\n",
+      "Epoch 2 : 9144 / 10000\n",
+      "Epoch 3 : 9200 / 10000\n",
+      "Epoch 4 : 9244 / 10000\n",
+      "Epoch 5 : 9278 / 10000\n",
+      "Epoch 6 : 9273 / 10000\n",
+      "Epoch 7 : 9307 / 10000\n",
+      "Epoch 8 : 9316 / 10000\n",
+      "Epoch 9 : 9321 / 10000\n",
+      "Epoch 10 : 9335 / 10000\n",
+      "Epoch 11 : 9329 / 10000\n",
+      "Epoch 12 : 9345 / 10000\n",
+      "Epoch 13 : 9349 / 10000\n",
+      "Epoch 14 : 9388 / 10000\n",
+      "Epoch 15 : 9376 / 10000\n",
+      "Epoch 16 : 9383 / 10000\n",
+      "Epoch 17 : 9368 / 10000\n",
+      "Epoch 18 : 9392 / 10000\n",
+      "Epoch 19 : 9403 / 10000\n",
+      "Epoch 20 : 9403 / 10000\n",
+      "Epoch 21 : 9413 / 10000\n",
+      "Epoch 22 : 9431 / 10000\n",
+      "Epoch 23 : 9405 / 10000\n",
+      "Epoch 24 : 9414 / 10000\n",
+      "Epoch 25 : 9430 / 10000\n",
+      "Epoch 26 : 9421 / 10000\n",
+      "Epoch 27 : 9409 / 10000\n",
+      "Epoch 28 : 9443 / 10000\n",
+      "Epoch 29 : 9433 / 10000\n"
      ]
     }
    ],
    "source": [
     "net=network.Network([784,30,10])\n",
-    "net.SGD( training_data, 30, 10, 3.0, test_data=test_data)"
+    "net.SGD( training_data, 30, 10, 0.1,0.9, test_data=test_data)"
    ],
    "metadata": {
     "collapsed": false,
@@ -100,7 +100,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Se guarda la red neuronal para conservar los pesos y bias"
+    "Se entrena la red con diferentes parámetros, 100 neuronas en la capa intermedia, $\\eta$=0.01, $\\gamma$=0.9"
    ],
    "metadata": {
     "collapsed": false,
@@ -111,158 +111,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "archivo = open(\"red_prueba1.pkl\",'wb')\n",
-    "pickle.dump(net,archivo)\n",
-    "archivo.close()\n",
-    "exit()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Se vuelve a leer el archivo para cargar los datos guardados y recuperar la red"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#leer el archivo\n",
-    "archivo_lectura = open(\"red_prueba.pkl\",'rb')\n",
-    "net = pickle.load(archivo_lectura)\n",
-    "archivo_lectura.close()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Se entrena la red con diferentes parámetros"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : 8261 / 10000\n",
-      "Epoch 1 : 8396 / 10000\n",
-      "Epoch 2 : 8484 / 10000\n",
-      "Epoch 3 : 8518 / 10000\n",
-      "Epoch 4 : 8572 / 10000\n",
-      "Epoch 5 : 8587 / 10000\n",
-      "Epoch 6 : 8810 / 10000\n",
-      "Epoch 7 : 9568 / 10000\n",
-      "Epoch 8 : 9584 / 10000\n",
-      "Epoch 9 : 9578 / 10000\n",
-      "Epoch 10 : 9581 / 10000\n",
-      "Epoch 11 : 9606 / 10000\n",
-      "Epoch 12 : 9614 / 10000\n",
-      "Epoch 13 : 9630 / 10000\n",
-      "Epoch 14 : 9618 / 10000\n",
-      "Epoch 15 : 9618 / 10000\n",
-      "Epoch 16 : 9633 / 10000\n",
-      "Epoch 17 : 9630 / 10000\n",
-      "Epoch 18 : 9637 / 10000\n",
-      "Epoch 19 : 9637 / 10000\n",
-      "Epoch 20 : 9636 / 10000\n",
-      "Epoch 21 : 9662 / 10000\n",
-      "Epoch 22 : 9654 / 10000\n",
-      "Epoch 23 : 9656 / 10000\n",
-      "Epoch 24 : 9652 / 10000\n",
-      "Epoch 25 : 9665 / 10000\n",
-      "Epoch 26 : 9653 / 10000\n",
-      "Epoch 27 : 9658 / 10000\n",
-      "Epoch 28 : 9660 / 10000\n",
-      "Epoch 29 : 9658 / 10000\n"
+      "Epoch 0 : 5692 / 10000\n",
+      "Epoch 1 : 5803 / 10000\n",
+      "Epoch 2 : 5821 / 10000\n",
+      "Epoch 3 : 6691 / 10000\n",
+      "Epoch 4 : 6744 / 10000\n",
+      "Epoch 5 : 6745 / 10000\n",
+      "Epoch 6 : 6763 / 10000\n",
+      "Epoch 7 : 6765 / 10000\n",
+      "Epoch 8 : 6765 / 10000\n",
+      "Epoch 9 : 6781 / 10000\n",
+      "Epoch 10 : 6791 / 10000\n",
+      "Epoch 11 : 6812 / 10000\n",
+      "Epoch 12 : 6780 / 10000\n",
+      "Epoch 13 : 6814 / 10000\n",
+      "Epoch 14 : 6833 / 10000\n",
+      "Epoch 15 : 6852 / 10000\n",
+      "Epoch 16 : 6861 / 10000\n",
+      "Epoch 17 : 6890 / 10000\n",
+      "Epoch 18 : 6881 / 10000\n",
+      "Epoch 19 : 6923 / 10000\n",
+      "Epoch 20 : 6949 / 10000\n",
+      "Epoch 21 : 7673 / 10000\n",
+      "Epoch 22 : 7735 / 10000\n",
+      "Epoch 23 : 7741 / 10000\n",
+      "Epoch 24 : 7734 / 10000\n",
+      "Epoch 25 : 7733 / 10000\n",
+      "Epoch 26 : 7754 / 10000\n",
+      "Epoch 27 : 7759 / 10000\n",
+      "Epoch 28 : 7755 / 10000\n",
+      "Epoch 29 : 7759 / 10000\n",
+      "Epoch 30 : 7762 / 10000\n",
+      "Epoch 31 : 7762 / 10000\n",
+      "Epoch 32 : 7764 / 10000\n",
+      "Epoch 33 : 7766 / 10000\n",
+      "Epoch 34 : 7772 / 10000\n",
+      "Epoch 35 : 7754 / 10000\n",
+      "Epoch 36 : 7764 / 10000\n",
+      "Epoch 37 : 7766 / 10000\n",
+      "Epoch 38 : 7772 / 10000\n",
+      "Epoch 39 : 7763 / 10000\n",
+      "Epoch 40 : 7769 / 10000\n",
+      "Epoch 41 : 7764 / 10000\n",
+      "Epoch 42 : 7765 / 10000\n",
+      "Epoch 43 : 7768 / 10000\n",
+      "Epoch 44 : 7772 / 10000\n",
+      "Epoch 45 : 7764 / 10000\n",
+      "Epoch 46 : 7761 / 10000\n",
+      "Epoch 47 : 7762 / 10000\n",
+      "Epoch 48 : 7764 / 10000\n",
+      "Epoch 49 : 7768 / 10000\n"
      ]
     }
    ],
    "source": [
     "net=network.Network([784,100,10])\n",
-    "net.SGD( training_data, 30, 10, 3.0, test_data=test_data)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0 : 1927 / 10000\n",
-      "Epoch 1 : 999 / 10000\n",
-      "Epoch 2 : 999 / 10000\n",
-      "Epoch 3 : 999 / 10000\n",
-      "Epoch 4 : 999 / 10000\n",
-      "Epoch 5 : 999 / 10000\n",
-      "Epoch 6 : 999 / 10000\n",
-      "Epoch 7 : 999 / 10000\n",
-      "Epoch 8 : 999 / 10000\n",
-      "Epoch 9 : 999 / 10000\n",
-      "Epoch 10 : 999 / 10000\n",
-      "Epoch 11 : 999 / 10000\n",
-      "Epoch 12 : 999 / 10000\n",
-      "Epoch 13 : 999 / 10000\n",
-      "Epoch 14 : 999 / 10000\n",
-      "Epoch 15 : 998 / 10000\n",
-      "Epoch 16 : 999 / 10000\n",
-      "Epoch 17 : 999 / 10000\n",
-      "Epoch 18 : 999 / 10000\n",
-      "Epoch 19 : 999 / 10000\n",
-      "Epoch 20 : 999 / 10000\n",
-      "Epoch 21 : 999 / 10000\n",
-      "Epoch 22 : 999 / 10000\n",
-      "Epoch 23 : 999 / 10000\n",
-      "Epoch 24 : 999 / 10000\n",
-      "Epoch 25 : 999 / 10000\n",
-      "Epoch 26 : 999 / 10000\n",
-      "Epoch 27 : 999 / 10000\n",
-      "Epoch 28 : 999 / 10000\n",
-      "Epoch 29 : 999 / 10000\n"
-     ]
-    }
-   ],
-   "source": [
-    "net=network.Network([784,30,10])\n",
-    "net.SGD( training_data, 30, 10, 100.0, test_data=test_data)"
+    "net.SGD( training_data, 50, 10, 0.2, 0.9, test_data=test_data)"
    ],
    "metadata": {
     "collapsed": false,
