Se agregó el optimizador RMSprop y capturas de pantalla
Usé la misma estructura que para el SGD con inercia. El único problema que experimenté fue que usé los paréntesis para multiplicar dos números, ejemplo (a)(b)  cuando debió haber sido a*b (en las líneas 99 y 100 del archivo network.py), al principio no sabía a qué se debía el error, después de examinar el código durante un buen rato decidí buscar el error en Google, ahí descubrí que el error se puede originar de varias formas, entre ellas el uso de paréntesis como multiplicadores.
De igual forma, no noté una diferencia al usar este optimizador, el SGD con inercia o el SGD. El porcentaje de aciertos, de nuevo, fue de aproximadamente 94%. No sabía que valor de épsilon usar, el que parece que me dio mejores resultados fue usar épsilon igual a 1.
Usando 100 neuronas en la capa intermedia obtuve un resultado no tan diferente, pero peor, que usando SGD con inercia, el porcentaje de aciertos fue de 75% al usar 30 épocas, eta igual a 0.1, beta igual a 0.9 y épsilon igual a 1.
Los resultados completos de haber corrido el código se pueden encontrar en el archivo pruebas.ipynb.

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import mnist_loader\n",
-    "import network\n",
-    "import pickle"
+    "import network"
    ],
    "metadata": {
     "collapsed": false,
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "training_data, validation_data , test_data = mnist_loader.load_data_wrapper()\n",
@@ -53,42 +52,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : 8169 / 10000\n",
-      "Epoch 1 : 8381 / 10000\n",
-      "Epoch 2 : 8456 / 10000\n",
-      "Epoch 3 : 9314 / 10000\n",
-      "Epoch 4 : 9358 / 10000\n",
-      "Epoch 5 : 9356 / 10000\n",
-      "Epoch 6 : 9396 / 10000\n",
-      "Epoch 7 : 9425 / 10000\n",
-      "Epoch 8 : 9422 / 10000\n",
-      "Epoch 9 : 9426 / 10000\n",
-      "Epoch 10 : 9444 / 10000\n",
-      "Epoch 11 : 9414 / 10000\n",
-      "Epoch 12 : 9433 / 10000\n",
-      "Epoch 13 : 9441 / 10000\n",
-      "Epoch 14 : 9477 / 10000\n",
-      "Epoch 15 : 9455 / 10000\n",
-      "Epoch 16 : 9483 / 10000\n",
-      "Epoch 17 : 9455 / 10000\n",
-      "Epoch 18 : 9496 / 10000\n",
-      "Epoch 19 : 9486 / 10000\n",
-      "Epoch 20 : 9459 / 10000\n",
-      "Epoch 21 : 9485 / 10000\n",
-      "Epoch 22 : 9490 / 10000\n",
-      "Epoch 23 : 9509 / 10000\n",
-      "Epoch 24 : 9475 / 10000\n",
-      "Epoch 25 : 9494 / 10000\n",
-      "Epoch 26 : 9496 / 10000\n",
-      "Epoch 27 : 9512 / 10000\n",
-      "Epoch 28 : 9506 / 10000\n",
-      "Epoch 29 : 9480 / 10000\n"
+      "Epoch 0 : 8752 / 10000\n",
+      "Epoch 1 : 9002 / 10000\n",
+      "Epoch 2 : 9099 / 10000\n",
+      "Epoch 3 : 9160 / 10000\n",
+      "Epoch 4 : 9200 / 10000\n",
+      "Epoch 5 : 9238 / 10000\n",
+      "Epoch 6 : 9267 / 10000\n",
+      "Epoch 7 : 9272 / 10000\n",
+      "Epoch 8 : 9295 / 10000\n",
+      "Epoch 9 : 9311 / 10000\n",
+      "Epoch 10 : 9337 / 10000\n",
+      "Epoch 11 : 9314 / 10000\n",
+      "Epoch 12 : 9344 / 10000\n",
+      "Epoch 13 : 9360 / 10000\n",
+      "Epoch 14 : 9349 / 10000\n",
+      "Epoch 15 : 9373 / 10000\n",
+      "Epoch 16 : 9392 / 10000\n",
+      "Epoch 17 : 9383 / 10000\n",
+      "Epoch 18 : 9404 / 10000\n",
+      "Epoch 19 : 9395 / 10000\n",
+      "Epoch 20 : 9401 / 10000\n",
+      "Epoch 21 : 9385 / 10000\n",
+      "Epoch 22 : 9413 / 10000\n",
+      "Epoch 23 : 9403 / 10000\n",
+      "Epoch 24 : 9400 / 10000\n",
+      "Epoch 25 : 9426 / 10000\n",
+      "Epoch 26 : 9396 / 10000\n",
+      "Epoch 27 : 9397 / 10000\n",
+      "Epoch 28 : 9418 / 10000\n",
+      "Epoch 29 : 9413 / 10000\n"
      ]
     }
    ],
    "source": [
     "net=network.Network([784,30,10])\n",
-    "net.SGD( training_data, 30, 10, 3.0, test_data=test_data)"
+    "net.SGD(training_data, 30, 10, 0.1, 0.9, 1, test_data=test_data)"
    ],
    "metadata": {
     "collapsed": false,
@@ -100,7 +99,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Se guarda la red neuronal para conservar los pesos y bias"
+    "Se entrena la red con diferentes parámetros"
    ],
    "metadata": {
     "collapsed": false,
@@ -112,29 +111,52 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 : 5446 / 10000\n",
+      "Epoch 1 : 5567 / 10000\n",
+      "Epoch 2 : 5648 / 10000\n",
+      "Epoch 3 : 5699 / 10000\n",
+      "Epoch 4 : 7308 / 10000\n",
+      "Epoch 5 : 7394 / 10000\n",
+      "Epoch 6 : 7410 / 10000\n",
+      "Epoch 7 : 7449 / 10000\n",
+      "Epoch 8 : 7465 / 10000\n",
+      "Epoch 9 : 7496 / 10000\n",
+      "Epoch 10 : 7501 / 10000\n",
+      "Epoch 11 : 7497 / 10000\n",
+      "Epoch 12 : 7521 / 10000\n",
+      "Epoch 13 : 7524 / 10000\n",
+      "Epoch 14 : 7526 / 10000\n",
+      "Epoch 15 : 7531 / 10000\n",
+      "Epoch 16 : 7535 / 10000\n",
+      "Epoch 17 : 7529 / 10000\n",
+      "Epoch 18 : 7541 / 10000\n",
+      "Epoch 19 : 7550 / 10000\n",
+      "Epoch 20 : 7546 / 10000\n",
+      "Epoch 21 : 7551 / 10000\n",
+      "Epoch 22 : 7553 / 10000\n",
+      "Epoch 23 : 7567 / 10000\n",
+      "Epoch 24 : 7542 / 10000\n",
+      "Epoch 25 : 7554 / 10000\n",
+      "Epoch 26 : 7560 / 10000\n",
+      "Epoch 27 : 7559 / 10000\n",
+      "Epoch 28 : 7564 / 10000\n",
+      "Epoch 29 : 7560 / 10000\n"
+     ]
+    }
+   ],
    "source": [
-    "archivo = open(\"red_prueba1.pkl\",'wb')\n",
-    "pickle.dump(net,archivo)\n",
-    "archivo.close()\n",
-    "exit()"
+    "net=network.Network([784,100,10])\n",
+    "net.SGD( training_data, 30, 10, 0.1, 0.9, 1, test_data=test_data)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Se vuelve a leer el archivo para cargar los datos guardados y recuperar la red"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
     }
    }
   },
