Se añadió Cross-Entropy
Se usó la misma estructura para la función cost_derivate de la calse Network que la utilizada en la rama sgdmomentum. De igual manera, no se notó una mejora en el desempeño de la red usando 30 neuronas en la capa intermedia. Hubo una gran mejora en la red con 100 neuronas en la capa intermedia, incluso tuvo un mejor desempeño que la red con SGD con inercia, donde se obtuvo un 94.94% de aciertos. En este caso se tuvo un 96.22% de aciertos, siendo el segundo mejor resultado obtenido hasta ahora, donde solo es superado (por 0.36%) por la red neuronal con SGD, función de costo cuadrática y eta igual a 3 (pruebas.ipynb de la rama main).

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -3,181 +3,201 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "import mnist_loader\n",
-    "import network"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "import mnist_loader\n",
+    "import network"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Se cargan los datos de entrenamiento, validación y testeo desde el modulo mnist_loader"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Se cargan los datos de entrenamiento, validación y testeo desde el modulo mnist_loader"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "training_data, validation_data , test_data = mnist_loader.load_data_wrapper()\n",
     "\n",
     "training_data = list(training_data)\n",
     "test_data = list(test_data)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : 8752 / 10000\n",
-      "Epoch 1 : 9002 / 10000\n",
-      "Epoch 2 : 9099 / 10000\n",
-      "Epoch 3 : 9160 / 10000\n",
-      "Epoch 4 : 9200 / 10000\n",
-      "Epoch 5 : 9238 / 10000\n",
-      "Epoch 6 : 9267 / 10000\n",
-      "Epoch 7 : 9272 / 10000\n",
-      "Epoch 8 : 9295 / 10000\n",
-      "Epoch 9 : 9311 / 10000\n",
-      "Epoch 10 : 9337 / 10000\n",
-      "Epoch 11 : 9314 / 10000\n",
-      "Epoch 12 : 9344 / 10000\n",
-      "Epoch 13 : 9360 / 10000\n",
-      "Epoch 14 : 9349 / 10000\n",
-      "Epoch 15 : 9373 / 10000\n",
-      "Epoch 16 : 9392 / 10000\n",
-      "Epoch 17 : 9383 / 10000\n",
-      "Epoch 18 : 9404 / 10000\n",
-      "Epoch 19 : 9395 / 10000\n",
-      "Epoch 20 : 9401 / 10000\n",
-      "Epoch 21 : 9385 / 10000\n",
-      "Epoch 22 : 9413 / 10000\n",
-      "Epoch 23 : 9403 / 10000\n",
-      "Epoch 24 : 9400 / 10000\n",
-      "Epoch 25 : 9426 / 10000\n",
-      "Epoch 26 : 9396 / 10000\n",
-      "Epoch 27 : 9397 / 10000\n",
-      "Epoch 28 : 9418 / 10000\n",
-      "Epoch 29 : 9413 / 10000\n"
+      "Epoch 0 : 8672 / 10000\n",
+      "Epoch 1 : 8980 / 10000\n",
+      "Epoch 2 : 9088 / 10000\n",
+      "Epoch 3 : 9147 / 10000\n",
+      "Epoch 4 : 9198 / 10000\n",
+      "Epoch 5 : 9213 / 10000\n",
+      "Epoch 6 : 9266 / 10000\n",
+      "Epoch 7 : 9259 / 10000\n",
+      "Epoch 8 : 9297 / 10000\n",
+      "Epoch 9 : 9327 / 10000\n",
+      "Epoch 10 : 9317 / 10000\n",
+      "Epoch 11 : 9335 / 10000\n",
+      "Epoch 12 : 9341 / 10000\n",
+      "Epoch 13 : 9353 / 10000\n",
+      "Epoch 14 : 9378 / 10000\n",
+      "Epoch 15 : 9360 / 10000\n",
+      "Epoch 16 : 9364 / 10000\n",
+      "Epoch 17 : 9395 / 10000\n",
+      "Epoch 18 : 9384 / 10000\n",
+      "Epoch 19 : 9396 / 10000\n",
+      "Epoch 20 : 9420 / 10000\n",
+      "Epoch 21 : 9426 / 10000\n",
+      "Epoch 22 : 9432 / 10000\n",
+      "Epoch 23 : 9407 / 10000\n",
+      "Epoch 24 : 9429 / 10000\n",
+      "Epoch 25 : 9422 / 10000\n",
+      "Epoch 26 : 9435 / 10000\n",
+      "Epoch 27 : 9454 / 10000\n",
+      "Epoch 28 : 9433 / 10000\n",
+      "Epoch 29 : 9444 / 10000\n",
+      "Epoch 30 : 9434 / 10000\n",
+      "Epoch 31 : 9455 / 10000\n",
+      "Epoch 32 : 9442 / 10000\n",
+      "Epoch 33 : 9454 / 10000\n",
+      "Epoch 34 : 9454 / 10000\n",
+      "Epoch 35 : 9470 / 10000\n",
+      "Epoch 36 : 9466 / 10000\n",
+      "Epoch 37 : 9451 / 10000\n",
+      "Epoch 38 : 9462 / 10000\n",
+      "Epoch 39 : 9476 / 10000\n",
+      "Epoch 40 : 9461 / 10000\n",
+      "Epoch 41 : 9466 / 10000\n",
+      "Epoch 42 : 9464 / 10000\n",
+      "Epoch 43 : 9473 / 10000\n",
+      "Epoch 44 : 9467 / 10000\n"
      ]
     }
    ],
    "source": [
     "net=network.Network([784,30,10])\n",
-    "net.SGD(training_data, 30, 10, 0.1, 0.9, 1, test_data=test_data)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "net.SGD(training_data, 45, 10, 0.01, 0.9, 1, test_data=test_data)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Se entrena la red con diferentes parámetros"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Se entrena la red con diferentes parámetros"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : 5446 / 10000\n",
-      "Epoch 1 : 5567 / 10000\n",
-      "Epoch 2 : 5648 / 10000\n",
-      "Epoch 3 : 5699 / 10000\n",
-      "Epoch 4 : 7308 / 10000\n",
-      "Epoch 5 : 7394 / 10000\n",
-      "Epoch 6 : 7410 / 10000\n",
-      "Epoch 7 : 7449 / 10000\n",
-      "Epoch 8 : 7465 / 10000\n",
-      "Epoch 9 : 7496 / 10000\n",
-      "Epoch 10 : 7501 / 10000\n",
-      "Epoch 11 : 7497 / 10000\n",
-      "Epoch 12 : 7521 / 10000\n",
-      "Epoch 13 : 7524 / 10000\n",
-      "Epoch 14 : 7526 / 10000\n",
-      "Epoch 15 : 7531 / 10000\n",
-      "Epoch 16 : 7535 / 10000\n",
-      "Epoch 17 : 7529 / 10000\n",
-      "Epoch 18 : 7541 / 10000\n",
-      "Epoch 19 : 7550 / 10000\n",
-      "Epoch 20 : 7546 / 10000\n",
-      "Epoch 21 : 7551 / 10000\n",
-      "Epoch 22 : 7553 / 10000\n",
-      "Epoch 23 : 7567 / 10000\n",
-      "Epoch 24 : 7542 / 10000\n",
-      "Epoch 25 : 7554 / 10000\n",
-      "Epoch 26 : 7560 / 10000\n",
-      "Epoch 27 : 7559 / 10000\n",
-      "Epoch 28 : 7564 / 10000\n",
-      "Epoch 29 : 7560 / 10000\n"
+      "Epoch 0 : 7453 / 10000\n",
+      "Epoch 1 : 7526 / 10000\n",
+      "Epoch 2 : 7629 / 10000\n",
+      "Epoch 3 : 8485 / 10000\n",
+      "Epoch 4 : 9397 / 10000\n",
+      "Epoch 5 : 9488 / 10000\n",
+      "Epoch 6 : 9529 / 10000\n",
+      "Epoch 7 : 9561 / 10000\n",
+      "Epoch 8 : 9526 / 10000\n",
+      "Epoch 9 : 9553 / 10000\n",
+      "Epoch 10 : 9539 / 10000\n",
+      "Epoch 11 : 9587 / 10000\n",
+      "Epoch 12 : 9591 / 10000\n",
+      "Epoch 13 : 9603 / 10000\n",
+      "Epoch 14 : 9606 / 10000\n",
+      "Epoch 15 : 9599 / 10000\n",
+      "Epoch 16 : 9600 / 10000\n",
+      "Epoch 17 : 9591 / 10000\n",
+      "Epoch 18 : 9602 / 10000\n",
+      "Epoch 19 : 9604 / 10000\n",
+      "Epoch 20 : 9608 / 10000\n",
+      "Epoch 21 : 9608 / 10000\n",
+      "Epoch 22 : 9605 / 10000\n",
+      "Epoch 23 : 9606 / 10000\n",
+      "Epoch 24 : 9625 / 10000\n",
+      "Epoch 25 : 9611 / 10000\n",
+      "Epoch 26 : 9610 / 10000\n",
+      "Epoch 27 : 9619 / 10000\n",
+      "Epoch 28 : 9621 / 10000\n",
+      "Epoch 29 : 9622 / 10000\n"
      ]
     }
    ],
    "source": [
     "net=network.Network([784,100,10])\n",
     "net.SGD( training_data, 30, 10, 0.1, 0.9, 1, test_data=test_data)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.12 ('Machine Learning')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "908c6857a9a2cb87d7ce0d0c1f32efc6c9589d4ff0e8e7e2d642cd1c049890c8"
+   }
   }
  },
  "nbformat": 4,
